# cinpy

./: .gitignore  README.md  pyproject.toml
examples/: defaults.py  imports.py  operations.py  preprocessing.py  printing.py  recursion.py
src/cinpy/: __init__.py  shared.py
